--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,17 +160,33 @@ nav {
 
 .galeria {
   width: 20%;
-  width: 304px;
-  height: 174px;
+  height: 185px;
   border: 8px solid #16161a;
-  border-radius: 2px;
+  border-radius: 5px;
   color: #ffffff;
   /* centrado de letras imagen */
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 32px;
+  overflow: hidden;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/media/imagenes/header/Hero.jpg");
 }
+
+.galeria img {
+  width: 100%;
+  min-height: 200px;
+  
+}
+
+
+
+
+
+
+
+
 /* FIN propiedades Elementos --> Sección INSTALACIONES */
 
 /* INICIO propiedades Elementos --> Sección ACTIVIDADES */
