--- a/css/estilos.css
+++ b/css/estilos.css
@@ -158,7 +158,7 @@ nav {
   padding: 75px 25px 75px 25px;
 }
 
-.galeria {
+.galeria_inst {
   width: 20%;
   height: 185px;
   border: 8px solid #16161a;
@@ -170,8 +170,7 @@ nav {
   align-items: center;
   font-size: 32px;
   overflow: hidden;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("/media/imagenes/header/Hero.jpg");
+  
 }
 
 .galeria img {
@@ -231,12 +230,14 @@ nav {
   background-color: #16161a;
   border-bottom: solid 2px;
 }
-/*
+
 .pestanas p:hover{
 color:#7F5AF0;
 border-bottom: solid 2px #7F5AF0;
 }
-*/
+
+
+
 
 .actividades {
   margin-top: 25px;
@@ -246,15 +247,43 @@ border-bottom: solid 2px #7F5AF0;
   max-height: 230px;
   min-height: 230px;
   border: 8px solid #242629;
-  border-radius: 2px;
-  background-color: #242629;
-  /* centrado de letras imagen */
+  border-radius: 5px;
   display: flex;
+  position: relative;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 32px;
   color: #94a1b2;
+  overflow: hidden;
 }
+
+.actividades:hover{
+  color: #ffffff;
+  border-color: #7F5AF0;
+}
+
+
+
+.actividades img{
+  width: 100%;
+  height: auto;
+  min-height: 250px;
+  opacity: 20%;
+}
+
+.actividades img:hover{
+  opacity: 90%;
+  }
+
+
+.actividades p{
+  position: absolute;
+  z-index: 1; /* coloca el párrafo encima de la imagen */
+  font-size: 60px;
+}
+
+
+
 
 /*
 .actividades:hover{
