--- a/css/estilos.css
+++ b/css/estilos.css
@@ -260,6 +260,7 @@ border-bottom: solid 2px #7F5AF0;
 .actividades:hover{
   color: #ffffff;
   border-color: #7F5AF0;
+  opacity: 90%;
 }
 
 
@@ -269,6 +270,7 @@ border-bottom: solid 2px #7F5AF0;
   height: auto;
   min-height: 250px;
   opacity: 20%;
+
 }
 
 .actividades img:hover{
@@ -284,13 +286,6 @@ border-bottom: solid 2px #7F5AF0;
 
 
 
-
-/*
-.actividades:hover{
-  border: 8px solid #7F5AF0;
-  color: white;
-}
-*/
 /* FIN propiedades Elementos --> Sección ACTIVIDADES */
 
 /* INICIO propiedades Elementos --> Sección ACTÍVATE */
@@ -412,13 +407,34 @@ button {
   justify-content: center;
 }
 
-.rrss {
-  width: 50px;
-  height: 50px;
-  background-color: #ffffff;
-  margin: 50px 35px 50px 35px;
+
+.rrss { 
+  width: 55px;
+  height: 55px;
+  margin: 45px 35px 45px 35px;
   display: flex;
   align-items: center;
   justify-content: center;
+  /*
+  border:solid 2px #242629;*/
 }
+/*
+.rrss:hover {
+border:solid 2px #7F5AF0;
+border-radius: 120px;
+
+  
+}*/
+
+.rrss_icon{
+  width: 100%;
+  height: auto;
+  fill: white;
+}
+.rrss_icon:hover{
+  fill: #7F5AF0;
+}
+
+
+
 /* FIN propiedades Elementos --> PIE-PAGINA */
