--- a/css/estilos.css
+++ b/css/estilos.css
@@ -309,20 +309,18 @@ border-bottom: solid 2px #7F5AF0;
 /* imagen localizacion*/
 .localizacion {
   width: 50%;
-  height: 400px;
+  height: 390px;
   margin: 75px;
-  background-color: #16161a;
+  margin-top: 115px;
   border-bottom: solid 8px #7f5af0;
-  color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
-.imagen-mapa p {
-  color: #ffffff;
-  font-size: 32px;
-}
+
 
 /* Formulario */
 .container-formulario {
