--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,7 +74,6 @@ nav {
   list-style: none;
   color: #ffffff;
   font-size: 36px;
-  
 }
 /*Eliminamos estilo por defecto de los enlaces del menu */
 .lista-menu a {
@@ -85,12 +84,8 @@ nav {
 }
 
 .lista-menu a:hover {
-  color:#7F5AF0;
- 
+  color: #7f5af0;
 }
-
-
-
 
 /* propiedades de Image Hero*/
 .container-logo {
@@ -181,21 +176,12 @@ nav {
   align-items: center;
   font-size: 32px;
   overflow: hidden;
-  
 }
 
 .galeria img {
   width: 100%;
   min-height: 200px;
-  
 }
-
-
-
-
-
-
-
 
 /* FIN propiedades Elementos --> Sección INSTALACIONES */
 
@@ -225,7 +211,6 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
-  
 }
 
 .pestanas a {
@@ -246,15 +231,11 @@ nav {
   transition-duration: 0.2s;
 }
 
-.pestanas a:hover{
-  color: #7F5AF0;
+.pestanas a:hover {
+  color: #7f5af0;
   font-size: 60px;
   text-decoration: none;
 }
-
-
-
-
 
 .actividades {
   margin-top: 25px;
@@ -274,17 +255,15 @@ nav {
   overflow: hidden;
   transition-property: all;
   transition-duration: 0.2s;
-  
 }
 
-.actividades:hover{
+.actividades:hover {
   color: #ffffff;
-  border-color: #7F5AF0;
+  border-color: #7f5af0;
   opacity: 100%;
 }
 
-
-.actividades img{
+.actividades img {
   width: 100%;
   height: auto;
   min-height: 250px;
@@ -293,18 +272,15 @@ nav {
   transition-duration: 0.2s;
 }
 
-.actividades img:hover{
+.actividades img:hover {
   opacity: 80%;
-  }
+}
 
-
-.actividades p{
+.actividades p {
   position: absolute;
   z-index: 1; /* coloca el párrafo encima de la imagen */
   font-size: 60px;
 }
-
-
 
 /* FIN propiedades Elementos --> Sección ACTIVIDADES */
 
@@ -340,20 +316,14 @@ nav {
   border-radius: 5px;
 }
 
-.localizacion img{
+.localizacion img {
   transition: transform 1.5s;
-
+  transition-delay: 0.5s;
 }
 
-.localizacion img:hover{
-transform: scale(1.6);
- 
+.localizacion img:hover {
+  transform: scale(1.5);
 }
-.localizacion img:not(:hover){
-  transform: scale(1);
-    transition-delay: 0.2s;
-  }
-
 
 
 /* Formulario */
@@ -407,6 +377,14 @@ button {
   font-size: 24px;
   align-self: flex-end;
   padding: 5px;
+  transition: all;
+  transition-duration: 0.2s;
+}
+
+button:hover {
+  background-color: #40454b;
+  border: solid 1px #7f5af0;
+  transform: scale(1.1);
 }
 
 .datos-contacto {
@@ -439,29 +417,26 @@ button {
   justify-content: center;
 }
 
-
-.rrss { 
+.rrss {
   width: 55px;
   height: 55px;
   margin: 45px 35px 45px 35px;
   display: flex;
   align-items: center;
   justify-content: center;
-  
 }
 
-
-.rrss_icon{
+.rrss_icon {
   width: 100%;
   height: auto;
   fill: white;
-  transition-property: fill;
-  transition-duration: 0.2s;
+  transition: fill 1s;
+  transition: transform 0.5s;
 }
-.rrss_icon:hover{
-  fill: #7F5AF0;
+.rrss_icon:hover {
+  
+  fill: #7f5af0;
+  transform: scale(1.3);
 }
-
-
 
 /* FIN propiedades Elementos --> PIE-PAGINA */
