--- a/css/estilos.css
+++ b/css/estilos.css
@@ -50,6 +50,7 @@ section {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("/media/imagenes/header/Hero.jpg");
   background-position: center;
+  background-size: cover;
 }
 
 header {
