--- a/css/estilos.css
+++ b/css/estilos.css
@@ -384,6 +384,83 @@ header {
   min-height: 200px;
 }
 
+#modalLightBox {
+  width: 100vw;
+  height: 100vh;
+  /*background-color: #242629;*/
+  position: fixed;
+  display: none;/*flex*/
+  z-index: 5;
+  flex-direction: center;
+  align-content: center;
+  justify-content: center;
+  background-color: rgba(4, 8, 15, 0.8);
+  top: 0;
+}
+#imagenMostradaContainer {
+  width: 80vw;
+  height: 80vh;
+  background-color: #242629;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  align-self: center;
+  border-radius: 20px;
+  color: #ffffff;
+  /*border: solid 1px #7f5af0;*/
+}
+
+.imagenMostrada{
+  width: 80%;
+  height: 80%;
+  overflow: hidden;
+  border-radius: 5px;
+  border: 8px solid #16161a;
+}
+.imagenMostrada img{
+  width: 100%;
+  height: auto;
+  
+  
+} 
+
+
+
+.botonLB{
+  width:5vw;
+  height: 10vh;
+  align-self: center; 
+  border: none;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  padding: auto;
+  background-color: rgba(4, 8, 15, 0.8);
+}
+
+.botonLB span{
+  font-size: 72px;
+  background-color: rgba(4, 8, 15, 0.8);
+  margin-left: 15px;
+  margin-right: 15px;
+  transition: transform 1s;
+}
+
+.botonLB:hover{
+  transform: scale(1.3);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* FIN propiedades Elementos --> Sección INSTALACIONES */
 
 /* INICIO propiedades Elementos --> Sección ACTIVIDADES */
