--- a/css/estilos.css
+++ b/css/estilos.css
@@ -399,7 +399,7 @@ header {
 }
 #imagenMostradaContainer {
   width: 80vw;
-  height: 80vh;
+  height: 70vh;
   background-color: #242629;
   display: flex;
   flex-direction: row;
@@ -411,14 +411,14 @@ header {
   /*border: solid 1px #7f5af0;*/
 }
 
-.imagenMostrada{
+#imagenMostrada{
   width: 80%;
   height: 80%;
   overflow: hidden;
   border-radius: 5px;
   border: 8px solid #16161a;
 }
-.imagenMostrada img{
+#imagenMostrada img{
   width: 100%;
   height: auto;
   
@@ -436,6 +436,7 @@ header {
   margin-right: 2vw;
   padding: auto;
   background-color: rgba(4, 8, 15, 0.8);
+  z-index: 10;
 }
 
 .botonLB span{
@@ -450,6 +451,11 @@ header {
   transform: scale(1.3);
 }
 
+.material-symbols-outlined{
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
 
 
 
