--- a/css/estilos.css
+++ b/css/estilos.css
@@ -436,13 +436,14 @@ header {
   margin-left: 2vw;
   margin-right: 2vw;
   padding: auto;
-  background-color: rgba(4, 8, 15, 0.8);
+  background-color: rgba(4, 8, 15, 0.1);
+  
   z-index: 10;
 }
 
 .botonLB span{
   font-size: 72px;
-  background-color: rgba(4, 8, 15, 0.8);
+  opacity: 100%;
   margin-left: 15px;
   margin-right: 15px;
   transition: transform 1s;
