--- a/css/estilos.css
+++ b/css/estilos.css
@@ -389,7 +389,7 @@ header {
   height: 100vh;
   /*background-color: #242629;*/
   position: fixed;
-  display: none;/*flex*/
+  display: none; /*flex*/
   z-index: 5;
   flex-direction: center;
   align-content: center;
@@ -412,36 +412,32 @@ header {
   /*border: solid 1px #7f5af0;*/
 }
 
-#imagenMostrada{
+#imagenMostrada {
   width: 80%;
   height: 80%;
   overflow: hidden;
   border-radius: 5px;
   border: 8px solid #16161a;
 }
-#imagenMostrada img{
+#imagenMostrada img {
   width: 100%;
   height: auto;
-  
-  
-} 
+}
 
-
-
-.botonLB{
-  width:5vw;
+.botonLB {
+  width: 5vw;
   height: 10vh;
-  align-self: center; 
+  align-self: center;
   border: none;
   margin-left: 2vw;
   margin-right: 2vw;
   padding: auto;
   background-color: rgba(4, 8, 15, 0.1);
-  
+
   z-index: 10;
 }
 
-.botonLB span{
+.botonLB span {
   font-size: 72px;
   opacity: 100%;
   margin-left: 15px;
@@ -449,10 +445,9 @@ header {
   transition: transform 1s;
 }
 
-.botonLB:hover{
+.botonLB:hover {
   transform: scale(1.3);
 }
-
 
 /* FIN propiedades Elementos --> Sección INSTALACIONES */
 
@@ -468,7 +463,7 @@ header {
 
 .container-galeria-actividades {
   width: 1500px;
-  height: 950px;
+  height: 1000px;
   background: #16161a;
   border-radius: 2px;
   display: flex;
@@ -482,6 +477,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .pestanas a {
@@ -506,6 +502,27 @@ header {
   color: #7f5af0;
   font-size: 60px;
   text-decoration: none;
+}
+
+.container_actividades{
+  width: 100%;
+  height: 950px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+
+#act_indoor{
+  display: none;
+}
+
+#act_outdoor{
+  display: none;
+}
+#act_aquazone{
+  display: flex;
 }
 
 .actividades {
@@ -723,7 +740,6 @@ input {
 
 #mensajeFormulario {
   font-size: 32px;
-  
 }
 
 /* modal*/
