--- a/css/estilos.css
+++ b/css/estilos.css
@@ -496,20 +496,22 @@ header {
   text-decoration: none;
   transition-property: color;
   transition-duration: 0.2s;
+  color: white;
 }
-
 .pestanasPActiva {
   color: #7f5af0;
 }
 
-/*
+.pestanasActivaRefresh {
+  color: #ffffff;
+}
 
 .pestanasP:hover {
-  color: #7f5af0;
+  color: #94a1b2;
   font-size: 60px;
   text-decoration: none;
 }
-*/
+
 .container_actividades {
   width: 100%;
   height: 950px;
