--- a/css/estilos.css
+++ b/css/estilos.css
@@ -845,9 +845,47 @@ input {
   margin: 10px;
   border-radius: 2px;
   border: 3px solid #40454b;
-  filter: grayscale(45%);
+  filter: grayscale(55%);
 }
 
 .equipoImg:hover{
   filter: grayscale(0%);
+}
+
+
+/* tool*/
+.tooltip-container {
+  position: relative;
+}
+
+.tooltip-text {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  background-color: #7f5af0;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  transition: opacity 0.2s, visibility 0.2s;
+  z-index: 5;
+  font-size: 32px;
+}
+
+.tooltip-text::after {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent #7f5af0 transparent;
+  
+}
+
+.tooltip-trigger:hover + .tooltip-text {
+  opacity: 1;
+  visibility: visible;
 }
