--- a/css/estilos.css
+++ b/css/estilos.css
@@ -543,7 +543,7 @@ section {
 .container-activate {
   width: 100%;
   height: 950px;
-  /* background-color: #16161a; */
+  background-color: #16161a; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -761,7 +761,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background-color: #242629; */
+  background-color: #242629; 
   padding-bottom: 25px;
   color: #94a1b2;
   
