--- a/css/estilos.css
+++ b/css/estilos.css
@@ -846,6 +846,7 @@ input {
   border-radius: 2px;
   border: 3px solid #40454b;
   filter: grayscale(55%);
+  transition: all 0.5s;
 }
 
 .equipoImg:hover{
@@ -949,5 +950,14 @@ input {
 .imgfiltro{
   width: 25%;
   height: auto;
+  min-height: 250px;
   margin: 15px;
+  border-radius: 5px;
+  border: 5px solid #40454b;
+  filter: grayscale(55%);
+  transition: all 0.5s;
+}
+.imgfiltro:hover{
+ 
+  filter: grayscale(0%);
 }
